fix(stats): Missalignement on page view counter

--- a/ProdManager/static/css/style.css
+++ b/ProdManager/static/css/style.css
@@ -640,6 +640,8 @@ input:checked + .slider:before {
 .resource_view {
   float: right;
 
+  margin-top: -50px;
+
   color: var(--base-ternary-background-color);
   fill: var(--base-ternary-background-color);
 
